Update Semgrep installation command to ignore installed packages

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install Semgrep
         run: |
-          sudo pip install semgrep
+          sudo pip install --ignore-installed semgrep
 
       - name: Run Semgrep SAST
         run: |
